+ Started Character Development

--- a/src/plugin.yml
+++ b/src/plugin.yml
@@ -4,3 +4,7 @@ version: 1.0
 author: Tiago & Vasco
 description: RPG é fixe
 commands:
+  Group:
+    usage: /<command> <Group> <TargetPlayer>
+    description: Gives a certain Group Permission to the player
+    permission-message: You don't have the permission to do this command.
