--- a/src/plugin.yml
+++ b/src/plugin.yml
@@ -29,3 +29,7 @@ commands:
     usage: /customitems
     description: Gives the player all the custom items
     permission-message: You don't have the permission to do this command.
+  custommob:
+    usage: /custommob
+    description: Spawns the current test custom mob
+    permission-message: You don't have the permission to do this command.
